--- a/BlockedFrontend/static/theme2.css
+++ b/BlockedFrontend/static/theme2.css
@@ -1,14 +1,20 @@
 
 body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-  line-height:30px;
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+  line-height: 28px;
+}
+
+p {
+    margin-bottom: 0.75em;
 }
 
 .toprow, .shaded {
 
     background-color: #fff3c1;
+    padding-bottom: 0.75em;
 }    
+
 
 .shaded {
     margin-top: 2.5em;
@@ -26,7 +32,9 @@ body {
 }
 
 .sitetitle {
-    font-size: 48pt;
+    font-family: "Poppins", sans-serif;
+    font-size: 56pt;
+    line-height: 68px;
     font-weight: bold;
     // color: #cc0000;
     background-color: #565656;
@@ -36,6 +44,11 @@ body {
      -moz-background-clip: text;
           background-clip: text;    
 }
+
+.subtitle {
+    font-family: "Poppins", sans-serif;
+    font-size: 14px;
+    }
 
 #blockcount {
   margin-top: 0.5em;
@@ -51,16 +64,16 @@ h1, .pctlg, #blockcount {
 }
 
 h2 {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 600;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
   font-size: 32px;
   line-height: 40px;
 }
 
 
 h3, .pctdesc, .pagerole, .page_title {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 600;
+  font-family: 'Lato', sans-serif;
+  font-weight: bold;
   font-size: 24px;
   line-height: 34px;
 }
@@ -77,8 +90,8 @@ a {
     color: white !important;
 }
 
-.btn-primary {
-    text-transform: uppercase;
+.btn {
+    font-weight: normal;
 }
 
 /* frontpage stats row */
@@ -111,3 +124,27 @@ a {
 .menurow {
   margin-top: 1.5em;
 }
+
+.mainmenu {
+    font-size: 16pt;
+    color: black;
+    font-weight: bold;
+    font-family: 'Lato', sans-serif;
+}
+
+.mainmenu div {
+    margin-top: 68px;
+    margin-bottom: 0px;
+}
+
+.mainmenu  a {
+    color: black !important;
+    margin-right: 1.2em;
+ 
+}
+
+/* front page */
+
+.randomurl {
+    margin-bottom: 0.75em;
+    }
