switch ORG logo

--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -62,7 +62,7 @@ banner_text_block(bool): show banner text block, default true
               {% endif %}
           </div>
           <div class="col-md-11">
-          A transparency campaign from <a href="https://www.openrightsgroup.org"><img src="/static/img/org_horiz.png" title="Open Rigts Group Logo" /></a>
+          A transparency campaign from <a href="https://www.openrightsgroup.org"><img src="/static/img/org-logo-white.svg" title="Open Rights Group Logo" /></a>
           </div>
         </div>
       </div>
