--- a/BlockedFrontend/templates/cms/reports.html
+++ b/BlockedFrontend/templates/cms/reports.html
@@ -1,5 +1,6 @@
 {% extends "layout_1x3.page.html" %}
 {% import "paging.part.html" as paging %}
+{% import "remotecontent.part.html" as rmt %}
 {% from "network_description.part.html" import isp_info, popover_js %}
 
 {%set pagetitle = g.remote_content.title if 'title' in g.remote_content
@@ -18,7 +19,7 @@
 {%endblock%}
 
 {% block page_menu %}
-<div><a href="{{ url_for('.reported_sites_category') }}">Reported sites, by category</a></div>
+{{ rmt.page_menu(content.page_menu_links) }}
 {% endblock %}
 
 {% block page_style %}
