Revert "Get page menu from CMS"
This reverts commit fdba4d8d

--- a/BlockedFrontend/templates/cms/remote_content1x3.html
+++ b/BlockedFrontend/templates/cms/remote_content1x3.html
@@ -22,5 +22,5 @@
 {% endblock %}
 
 {% block page_menu_alt %}
-{{ rmt.page_menu(content.page_menu_links) }}
+{{ content.page_menu | safe }}
 {% endblock %}
