improve site exclusion terminology

--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -315,7 +315,7 @@ Your feedback was successfully submitted.
 {%- if prev_unblock_type == 'unblock' -%}
   Unblock Requested
 {%- elif prev_unblock_type == 'blacklist' -%}
-  Site is blacklisted
+  Site is excluded
 {%- elif judgment -%}
   Site is blocked by court order  
 {%- else -%}
