--- a/BlockedFrontend/templates/admin/blacklist.html
+++ b/BlockedFrontend/templates/admin/blacklist.html
@@ -8,14 +8,14 @@
 <div class="col-md-8">
 <h1>{{pagetitle}}</h1>
 
-<h3>Domains added to the blacklist cannot be reported to ISPs</h3>
+<h3>Domains added to the exclude list cannot be reported to ISPs</h3>
 
 </div>
 <div class="col-md-4">
 
 <div class="well">
 <form class="form" method="POST" action="{{url_for('.blacklist_post')}}">
-<legend>Add new blacklist entry</legend>
+<legend>Add new exclude-list entry</legend>
 
 {{ forms.text_field('Domain', 'domain') }}
 
