--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -68,7 +68,7 @@
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">System Settings <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                  <li class=""><a href="{{ url_for('.blacklist_select') }}">Domain Blacklist</a></li>
+                  <li class=""><a href="{{ url_for('.blacklist_select') }}">Domain Exclude-list</a></li>
                   <li class=""><a href="{{ url_for('.search_filter') }}">Search Filter</a></li>
               </ul>
           </li>
