--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -208,7 +208,7 @@ tr:hover * .action-button {
   <td class="">
       <div class="btn-group action-button">
           <a class="btn btn-default" href="{{url_for('.ispreports_view', url=report.url, network_name=report.network_name)}}" title="View report">View</a>
-          <button class="dropdown-toggle btn" title="Actions for {{ report.url }}" data-toggle="dropdown">
+          <button class="dropdown-toggle btn btn-default" title="Actions for {{ report.url }}" data-toggle="dropdown">
               <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
